@@ -51,6 +51,7 @@ tasksel (3.10) UNRELEASED; urgency=low
     - Force installation of recommends even if turned off.
     - Force auto-removal of packages.
     - Don't longer remove packages. (closes: #579522)
+  * Support standard task with apt-get.
 
  -- Christian Perrier <bubulle@debian.org>  Sun, 25 Mar 2012 14:52:49 +0200
 
